update url to work for files